--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <button id="playAgainBtn">Play again</button>
             </div>
         </section>
-        <section id="headLine">
+        <h1 id="headLine">
             <p>Tic -</p>
             <p>Tac</p>
             <p>- Toe</p>
-        </section>
+        </h1>
     </div>
     <footer>
         <p>© avshady 2023</p>
