Make play again button work

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="wrapThisBody">
         <section id="opponentChoice">
             <select name="opponent">
-                <option value="AI" selected>AI</option>
+                <!--<option value="AI" selected>AI</option>-->
                 <option value="friend">Friend</option>
             </select>
         </section>
