Add win text and animation

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                 <button id="oMarkBtn">O</button>
             </div>
             <div id="wrapThisBoard">
+                <div id="winnerText">
+                    <p id="winnerMark"></p>
+                    <p id="outcomeText"></p>
+                </div>
                 <div id="gameBoard">
                     <span class="cell nt nl" data-index="0"></span>
                     <span class="cell nt" data-index="1"></span>
